# atproto-java

./: .bazelrc  .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  WORKSPACE
.github/workflows/: ci.yml
lex-cbor/: BUILD.bazel
lex-cbor/src/main/java/io/atproto/lex/cbor/: CborCodec.java  CidUtils.java
lex-cbor/src/test/java/io/atproto/lex/cbor/: AllTests.java  CborCodecTest.java  CidUtilsTest.java
lex-data/: BUILD.bazel
lex-data/src/main/java/io/atproto/lex/data/: BlobRef.java  Cid.java  LegacyBlobRef.java  LexArray.java  LexBlobRef.java  LexBoolean.java  LexBytes.java  LexCidLink.java  LexError.java  LexInteger.java  LexMap.java  LexNull.java  LexString.java  LexValue.java  Multihash.java  TypedBlobRef.java
lex-data/src/main/java/io/atproto/lex/data/util/: Base64Utils.java  LexValueDeepEquals.java  Utf8Utils.java  VarintUtils.java
lex-data/src/test/java/io/atproto/lex/data/: AllTests.java  CidTest.java  LexValueDeepEqualsTest.java
lex-json/: BUILD.bazel
lex-json/src/main/java/io/atproto/lex/json/: LexJsonConverter.java
lex-json/src/test/java/io/atproto/lex/json/: AllTests.java  LexJsonConverterTest.java
lexicon/: BUILD.bazel
lexicon/src/main/java/io/atproto/lexicon/: LexiconDocDeserializer.java  Lexicons.java
lexicon/src/main/java/io/atproto/lexicon/schema/: LexArray.java  LexBlob.java  LexBoolean.java  LexBytes.java  LexCidLink.java  LexInteger.java  LexObject.java  LexProcedure.java  LexQuery.java  LexRecord.java  LexRef.java  LexRefUnion.java  LexString.java  LexSubscription.java  LexToken.java  LexUnknown.java  LexUserType.java  LexXrpcBody.java  LexXrpcError.java  LexXrpcParameters.java  LexiconDoc.java
lexicon/src/main/java/io/atproto/lexicon/validation/: LexiconValidator.java  StringFormatValidator.java  ValidationError.java  ValidationFailure.java  ValidationResult.java  ValidationSuccess.java
lexicon/src/test/java/io/atproto/lexicon/: AllTests.java  LexiconDocDeserializerTest.java  LexiconsTest.java
lexicon/src/test/resources/testdata/: app.bsky.feed.post.json
maven/: BUILD.bazel  pom_template.xml  publish_all.sh
src/java/com/atproto/lex/cbor/: BUILD.bazel  CborCodec.java  CidUtils.java
src/java/com/atproto/lex/data/: BUILD.bazel  BlobRef.java  Cid.java  LegacyBlobRef.java  LexArray.java  LexBlobRef.java  LexBoolean.java  LexBytes.java  LexCidLink.java  LexError.java  LexInteger.java  LexMap.java  LexNull.java  LexString.java  LexValue.java  Multihash.java  TypedBlobRef.java
src/java/com/atproto/lex/data/util/: Base64Utils.java  LexValueDeepEquals.java  Utf8Utils.java  VarintUtils.java
src/java/com/atproto/lex/json/: BUILD.bazel  LexJsonConverter.java
src/java/com/atproto/lexicon/: BUILD.bazel  LexiconDocDeserializer.java  Lexicons.java
src/java/com/atproto/lexicon/schema/: LexArray.java  LexBlob.java  LexBoolean.java  LexBytes.java  LexCidLink.java  LexInteger.java  LexObject.java  LexProcedure.java  LexQuery.java  LexRecord.java  LexRef.java  LexRefUnion.java  LexString.java  LexSubscription.java  LexToken.java  LexUnknown.java  LexUserType.java  LexXrpcBody.java  LexXrpcError.java  LexXrpcParameters.java  LexiconDoc.java
src/java/com/atproto/lexicon/validation/: LexiconValidator.java  StringFormatValidator.java  ValidationError.java  ValidationFailure.java  ValidationResult.java  ValidationSuccess.java
src/java/com/atproto/xrpc/: BUILD.bazel  CallOptions.java  FetchHandler.java  OkHttpFetchHandler.java  QueryParams.java  ResponseType.java  XrpcClient.java  XrpcResponse.java
src/java/com/atproto/xrpc/error/: XrpcAuthenticationException.java  XrpcException.java  XrpcFetchException.java  XrpcInvalidResponseException.java  XrpcResponseException.java
src/java/com/atproto/xrpc/internal/: RequestBuilder.java  ResponseParser.java
src/test/java/com/atproto/: AllTests.java
src/test/java/com/atproto/lex/cbor/: AllTests.java  BUILD.bazel  CborCodecTest.java  CidUtilsTest.java
src/test/java/com/atproto/lex/data/: AllTests.java  BUILD.bazel  CidTest.java  LexValueDeepEqualsTest.java
src/test/java/com/atproto/lex/json/: AllTests.java  BUILD.bazel  LexJsonConverterTest.java
src/test/java/com/atproto/lexicon/: AllTests.java  BUILD.bazel  LexiconDocDeserializerTest.java  LexiconsTest.java
src/test/java/com/atproto/xrpc/: AllTests.java  BUILD.bazel  XrpcClientTest.java
tools/: BUILD.bazel  format.bzl  junit5.bzl
xrpc/: BUILD.bazel
xrpc/src/main/java/io/atproto/xrpc/: CallOptions.java  FetchHandler.java  OkHttpFetchHandler.java  QueryParams.java  ResponseType.java  XrpcClient.java  XrpcResponse.java
xrpc/src/main/java/io/atproto/xrpc/error/: XrpcAuthenticationException.java  XrpcException.java  XrpcFetchException.java  XrpcInvalidResponseException.java  XrpcResponseException.java
xrpc/src/main/java/io/atproto/xrpc/internal/: RequestBuilder.java  ResponseParser.java
xrpc/src/test/java/io/atproto/xrpc/: AllTests.java  XrpcClientTest.java
