module(
    name = "atproto_sdk",
    version = "0.1.0",
)

bazel_dep(name = "rules_java", version = "9.1.0")
bazel_dep(name = "rules_jvm_external", version = "6.7")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        # JSON
        "com.fasterxml.jackson.core:jackson-databind:2.17.2",
        "com.fasterxml.jackson.core:jackson-core:2.17.2",
        "com.fasterxml.jackson.core:jackson-annotations:2.17.2",
        "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:2.17.2",
        # HTTP client
        "com.squareup.okhttp3:okhttp:4.12.0",
        "com.squareup.okhttp3:mockwebserver:4.12.0",
        # CBOR
        "com.upokecenter:cbor:4.5.2",
        # Tooling
        "com.google.googlejavaformat:google-java-format:1.22.0",
        # Test
        "org.junit.jupiter:junit-jupiter-api:5.10.3",
        "org.junit.jupiter:junit-jupiter-engine:5.10.3",
        "org.junit.jupiter:junit-jupiter-params:5.10.3",
        "org.junit.platform:junit-platform-launcher:1.10.3",
        "org.junit.platform:junit-platform-console:1.10.3",
        "org.assertj:assertj-core:3.26.0",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
