java_library(
    name = "lex_cbor",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["--release", "21"],
    deps = [
        "//lex-data:lex_data",
        "@maven//:com_upokecenter_cbor",
    ],
    visibility = ["//visibility:public"],
)

java_test(
    name = "lex_cbor_tests",
    srcs = glob(["src/test/java/**/*.java"]),
    javacopts = ["--release", "21"],
    test_class = "io.atproto.lex.cbor.AllTests",
    deps = [
        ":lex_cbor",
        "//lex-data:lex_data",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_assertj_assertj_core",
    ],
)
