java_library(
    name = "lex_json",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["--release", "21"],
    deps = [
        "//lex-data:lex_data",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
    ],
    visibility = ["//visibility:public"],
)

java_test(
    name = "lex_json_tests",
    srcs = glob(["src/test/java/**/*.java"]),
    javacopts = ["--release", "21"],
    test_class = "io.atproto.lex.json.AllTests",
    deps = [
        ":lex_json",
        "//lex-data:lex_data",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_assertj_assertj_core",
    ],
)
