java_library(
    name = "lexicon",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = ["--release", "21"],
    resources = glob(["src/main/resources/**"]),
    deps = [
        "//lex-data:lex_data",
        "//lex-json:lex_json",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
    ],
    visibility = ["//visibility:public"],
)

java_test(
    name = "lexicon_tests",
    srcs = glob(["src/test/java/**/*.java"]),
    javacopts = ["--release", "21"],
    resources = glob(["src/test/resources/**"]),
    test_class = "io.atproto.lexicon.AllTests",
    deps = [
        ":lexicon",
        "//lex-data:lex_data",
        "//lex-json:lex_json",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_assertj_assertj_core",
    ],
)
