load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "lex_cbor",
    srcs = glob(["**/*.java"]),
    javacopts = ["--release", "21"],
    deps = [
        "//src/java/com/atproto/lex/data:lex_data",
        "@maven//:com_upokecenter_cbor",
    ],
    visibility = ["//visibility:public"],
)
