load("@rules_java//java:defs.bzl", "java_library")
load("@rules_jvm_external//:defs.bzl", "java_export")

java_library(
    name = "lex_data",
    srcs = glob(["**/*.java"]),
    javacopts = ["--release", "21"],
    visibility = ["//visibility:public"],
)

java_export(
    name = "lex_data_export",
    tags = ["no-javadocs"],
    maven_coordinates = "com.atproto:lex-data:0.1.0",
    pom_template = "//maven:pom_template.xml",
    exports = [":lex_data"],
    visibility = ["//visibility:public"],
)
