load("@rules_java//java:defs.bzl", "java_library")
load("@rules_jvm_external//:defs.bzl", "java_export")

java_library(
    name = "lex_json",
    srcs = glob(["**/*.java"]),
    javacopts = ["--release", "21"],
    deps = [
        "//src/java/com/atproto/lex/data:lex_data",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
    ],
    visibility = ["//visibility:public"],
)

java_export(
    name = "lex_json_export",
    tags = ["no-javadocs"],
    maven_coordinates = "com.atproto:lex-json:0.1.0",
    pom_template = "//maven:pom_template.xml",
    exports = [
        ":lex_json",
        "//src/java/com/atproto/lex/data:lex_data_export",
    ],
    visibility = ["//visibility:public"],
)
